# WifiManagerEsp32

./: CMakeLists.txt  README.md  SPIFFSControler.cpp  httpServer.cpp  jsonDecoder.cpp  wifiManagerIdf.cpp
include/: customEvents.hpp  httpServer.hpp  indexHtml.h  jsonDecoder.hpp  script.h  spiffsControler.hpp  style.h  wifiManagerIdf.hpp
